--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 venv
+.idea
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm+all
 
